test/tests/stages/18_structures/invalid_types/tag_resolution/shadow_struct.lex
-- Lexing ... OK
+
+
@@ Tokens @@
List[32]:
  struct
  identifier(s)
  ;
  struct
  identifier(s)
  *
  identifier(ptr1)
  =
  const int(0)
  ;
  int
  identifier(main)
  (
  void
  )
  {
  struct
  identifier(s)
  ;
  struct
  identifier(s)
  *
  identifier(ptr2)
  =
  const int(0)
  ;
  return
  identifier(ptr1)
  ==
  identifier(ptr2)
  ;
  }
